[gd_scene load_steps=4 format=2]

[ext_resource path="res://Items/HighPlatform/HighPlatform.gd" type="Script" id=1]
[ext_resource path="res://assets/highplatform.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 5 )

[node name="HighPlatform" type="Node2D"]
position = Vector2( 2400, 316 )
script = ExtResource( 1 )

[node name="PlatformTable" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="PlatformTable"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformTable"]
position = Vector2( 4, -70 )
shape = SubResource( 1 )

[node name="PlatformTop" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlatformTop"]
position = Vector2( 4, -75 )
shape = SubResource( 1 )
[connection signal="body_entered" from="PlatformTop" to="." method="_on_PlatformTop_body_entered"]
